--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/barlow": "^4.2.2",
+    "@fontsource/lato": "^4.2.2",
+    "@react-three/drei": "^4.1.8",
+    "@react-three/fiber": "^6.0.14",
     "gatsby": "^3.2.1",
     "gatsby-plugin-sass": "^4.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sass": "^1.32.8"
+    "react-icons": "^4.2.0",
+    "sass": "^1.32.8",
+    "three": "^0.127.0"
   }
 }
